trim jdk